fix(context): harden the timeline ledger and webui store after review
Gateway:
- fold from a copied snapshot, read the port outside the entry monitor,
  and skip the empty midpoint of a compaction rewrite instead of
  archiving the whole session as a prune
- keep the compact_boundary armed until rows actually leave, so a
  boundary seen one snapshot before the rewrite still owns the archive
- bound fold memory: node text only for the newest MAX_CONTENT_NODES,
  caps on pendingCalls and settledResponseIds
- emit subagent status 'done' (the webui only knows done|failed)
- forget the previous TUI ledger on session activation; close() frees
  every entry; provider only claimed for claude-* model ids
- clear the PMD Strings/StringUtils findings in the fold

WebUI:
- last-request-wins tickets for timeline and overview refreshes
- content fetcher re-reads the session cache per call so
  forgetContextContent() actually invalidates it
- Escape closes only the newest overlay; usageTotalsOf tolerates a
  hostile cost tree

Co-authored-by: Cursor <cursoragent@cursor.com>